# libMonomeCpp

./: .gitmodules  CMakeLists.txt  README.md
cmake/: FindMonome.cmake
examples/: 01-grid.cpp  02-sequencer.cpp  03-externalSequencer.cpp
include/: MonomeGrid.h
src/: MonomeGrid.cpp
